--- a/styles/style.css
+++ b/styles/style.css
@@ -5,55 +5,58 @@ html {
 
 img {
     display: block;
-    margin-top: 230px;
+    margin-top: 30%;
     margin-left: auto;
     margin-right: auto;
-    width: 25%;
+    width: 40%;
+}
+
+.main {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
 }
 
 input {
-    display: block;
-    border-radius: 10px;
-    border-color: lightgray;
     width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px, 20px;
+    padding: 8px 20px;
+    border-radius: 20px;
 }
 
-#about {
-    list-style-type: none;
-    font-size: medium;
-    margin-left: 30px;
+.button {
+    padding: 8px 10px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    border
 }
 
-#store {
+
+ul {
     list-style-type: none;
-    font-size: medium;
-    margin-top: -18px;
-    margin-left: 100px;
 }
 
-#gmail {
-    list-style-type: none;
-    font-size: medium;
-    margin-top: -18px;
-    margin-left: 800px;
+.left {    
+    color: black;
+    text-align: center;
+    padding: 16px;
+    float: left;
 }
 
-#images {
-    list-style-type: none;
-    font-size: medium;
-    margin-top: -18px;
-    margin-left: 870px;
+.right {
+    color: black;
+    text-align: center;
+    padding: 16px;
+    float: right;
 }
 
-#sign-in {
-    list-style-type: none;
-    font-size: medium;
-    margin-top: -18px;
-    margin-left: 950px;
+.sign-in {
+    float: right;
+    text-align: center;
+    padding: 16px;
     background: #4584ed;
-    border-radius: 3px;
-    background-clip: padding-box;
+    border-radius: 5px;
+}
+
+.footer {
+    margin-top: 300px;
 }
